# 540_final_project

./: README.md
C_programs/Ibrahim_app/FinalProject-App/: CMakeLists.txt
C_programs/robert_apps/: aiming_source.c  servo_control.h
C_programs/robert_apps/2pm_repo/: CMakeLists.txt
C_programs/robert_apps/servo_test_/: CMakeLists.txt
C_programs/robert_apps/servo_test_/src/: buttons.c  joystick_display.h  main_shooter.c  motor_control.h
Deliverables/C_code/: CMakeLists.txt
Deliverables/C_code/src/: joystick_control.c  joystick_control.h  joystick_display.c  joystick_display.h  joystick_wrapper.c  joystick_wrapper.h  main_shooter.c  motor_control.c  motor_control.h  servo_control.c  servo_control.h  ssegment.c  vga.h
ECE540/: ECE540.xpr
ECE540/ECE540.cache/wt/: project.wpc  synthesis.wdf  webtalk_pa.xml
ECE540/ECE540.runs/.jobs/: vrs_config_111.xml  vrs_config_12.xml  vrs_config_15.xml  vrs_config_2.xml  vrs_config_20.xml  vrs_config_3.xml  vrs_config_51.xml  vrs_config_91.xml  vrs_config_92.xml  vrs_config_93.xml
ECE540/ECE540.runs/clk_wiz_1_synth_1/: .vivado.begin.rst  clk_wiz_1.tcl  clk_wiz_1.vds  clk_wiz_1_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
ECE540/ECE540.runs/impl_1/: .opt_design.begin.rst  .vivado.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  rvfpgaboolean.bit  rvfpgaboolean.tcl  rvfpgaboolean.vdi  rvfpgaboolean_bus_skew_routed.rpt  rvfpgaboolean_clock_utilization_routed.rpt  rvfpgaboolean_control_sets_placed.rpt  rvfpgaboolean_drc_opted.rpt  rvfpgaboolean_drc_opted.rpx  rvfpgaboolean_drc_routed.rpt  rvfpgaboolean_drc_routed.rpx  rvfpgaboolean_io_placed.rpt  rvfpgaboolean_methodology_drc_routed.rpt  rvfpgaboolean_methodology_drc_routed.rpx  rvfpgaboolean_power_routed.rpt  rvfpgaboolean_power_summary_routed.pb  rvfpgaboolean_route_status.rpt  rvfpgaboolean_timing_summary_routed.rpt  rvfpgaboolean_timing_summary_routed.rpx  rvfpgaboolean_utilization_placed.pb  rvfpgaboolean_utilization_placed.rpt  tight_setup_hold_pins.txt  vivado.jou  write_bitstream.pb
ECE540/ECE540.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  rvfpgaboolean.tcl  vivado.jou  (+3 more)
RVfpga_Boolean/: RVfpgaBoolean.cpsp
RVfpga_Boolean/src/: rvfpgaboolean.sv  rvfpgaboolean.xdc  rvfpgaboolean_prev1.bit  rvfpgaboolean_prev2.bit
final_project/: final_project.xpr
new_final_project/ECE540/: ECE540.xpr
servo_module/: rvfpgaboolean.xdc  servo_controller_tb.v  veerwolf_core.v  wb_intercon.vh
src/app/FinalProject-App/: CMakeLists.txt
src/app/FinalProject-App/include/: bttn.h  hc_sr04.h  ssegment.h  switch.h  vga.h
src/app/FinalProject-App/src/: app.c  bttn.c  hc_sr04.c  main.c  ssegment.c  switch.c  vga.c
(+707 files in other folders)
